fix text overflow

--- a/Css/style.css
+++ b/Css/style.css
@@ -136,6 +136,8 @@ body {
     font-family: "Josefin Sans";
     text-shadow: 2px 2px rgb(184, 57, 35);
     text-transform: uppercase;
+    top: 1vmin;
+    position: relative;
     text-align: center;
     /* border: dotted blue; */
     font-size: 2.5vh;
@@ -228,5 +230,4 @@ body {
     color: rgb(187, 20, 20) !important;
     font-weight: 900;
     transition: all 2s ease-in;
-
 }
